<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_PressureMeasure" Id="{0dcd25cf-f437-4620-b1e6-1f68ace7a5c9}">
    <Declaration><![CDATA[TYPE ST_PressureMeasure:
STRUCT
	fiPullChumberVac:REAL;
	fiMainChumberVac:REAL;
	fiGrownPressVac:REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>