<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SystemVar" Id="{83fd363b-eb2c-4a75-b959-aabee5eb4abd}">
    <Declaration><![CDATA[TYPE ST_SystemVar :
STRUCT
	bNoProcessStu:BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>